test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/switch_on_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  switch
  (
  identifier(arr)
  )
  {
  default
  :
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
